--- a/CompetenceTree/WebProject/src/main/webapp/table.xhtml
+++ b/CompetenceTree/WebProject/src/main/webapp/table.xhtml
@@ -40,16 +40,16 @@ xmlns:p="http://primefaces.org/ui">
 
         <p:column style="width:100px">
             <f:facet name="header">
-                Size
+                Description
             </f:facet>
-            <h:outputText value="#{document.size}" />
+            <h:outputText value="#{document.description}" />
         </p:column>
 
         <p:column style="width:100px">
             <f:facet name="header">
-                Type
+                WikiLink
             </f:facet>
-            <h:outputText value="#{document.type}" />
+            <h:outputText value="#{document.wikiLink}" />
         </p:column>
 
         <f:facet name="footer">
